# rhetoric-check

./: .gitignore  README.md  ai_service.py  app_controller.py  components.py  main.py  pyproject.toml
.claude/: setting.json
