[project]
name = "rhetoric-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.66.0",
    "dotenv>=0.9.9",
    "flet[all]==0.28.3",
    "openai>=1.106.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.12",
    "ty>=0.0.1a20",
]
